src/mongo/db/commands/list_databases.cpp
@@ -84,6 +84,8 @@ namespace mongo {
                 BSONObjBuilder b;
                 b.append( "name", *i );
 
+                // TODO: The dbSize function is MMAP V1 specific and will need to be pulled in the
+                // storage engine.
                 intmax_t size = dbSize( i->c_str() );
                 b.append( "sizeOnDisk", (double) size );
                 totalSize += size;
@@ -93,33 +95,6 @@ namespace mongo {
                 dbInfos.push_back( b.obj() );
 
                 seen.insert( i->c_str() );
-            }
-
-            set<string> allShortNames;
-            dbHolder().getAllShortNames(allShortNames);
-
-            for ( set<string>::iterator i = allShortNames.begin(); i != allShortNames.end(); i++ ) {
-                string name = *i;
-
-                if (seen.count(name)) {
-                    continue;
-                }
-
-                // This should never happen once the write collection locking changes are in
-                // invariant(false);
-
-                BSONObjBuilder b;
-                b.append( "name" , name );
-                b.append( "sizeOnDisk" , (double)1.0 );
-
-                {
-                    // This will open the database, if it was closed
-                    AutoGetDb autoDb(txn, *i, newlm::MODE_S);
-                    Database* db = autoDb.getDb();
-                    b.appendBool("empty", db->getDatabaseCatalogEntry()->isEmpty());
-                }
-
-                dbInfos.push_back( b.obj() );
             }
 
             result.append( "databases", dbInfos );
